# Solana-NFT-Forge-with-Anchor

./: .editorconfig  .env.example  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  ConnectionGuide.txt  Dockerfile.deploy  LICENSE  NETWORK_FIX_ANALYSIS.md  README.md  RECIPE_V2_SETUP.md  docker-deploy.ps1  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vision.md
.github/workflows/: ci.yml
app/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/creator/recipes/: page.tsx
app/app/creator/recipes/[slug]/: page.tsx
app/app/mint/[slug]/: page.tsx
app/lib/: forgeClient.ts  wallet.tsx
docs/: localnet.md  manual-tasks.md  recipes.md
e2e/: example.spec.ts
programs/forge/: Cargo.toml
programs/forge-tests/: Cargo.toml
programs/forge-tests/src/: lib.rs
programs/forge-tests/src/tests/: integration.rs
programs/forge/src/: errors.rs  events.rs  lib.rs
programs/forge/src/cpi/: ingredients.rs  minting.rs  mod.rs  token_metadata.rs
programs/forge/src/instructions/: config.rs  forge.rs  initialize.rs  mod.rs  recipes.rs
programs/forge/src/state/: constants.rs  forge_config.rs  ingredients.rs  mod.rs  recipe.rs  recipe_use.rs
scripts/: anchor-build.ps1  deploy-devnet.ps1  deploy-devnet.sh  generate-idl.ps1  package-lock.json  package.json  start-validator.ps1  tsconfig.json
scripts/idl/: forge.json
scripts/src/: create-recipe.ts  forge-asset.ts  forge-example.ts  index.ts  init-forge.ts  toggle-recipe.ts
scripts/src/utils/: config.ts
(+1 files in other folders)
