[package]
name = "forge"
version = "0.1.0"
description = "Anchor program for the Solana NFT Forge project"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge"

[features]
no-entrypoint = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = "2.2.1"
solana-pubkey = "2.2.1"
solana-zk-sdk = "2.2.1"
# Metaplex Token Metadata CPI helpers
mpl-token-metadata = "5.1.1"

